syntax = "proto3";

package authentication_service.service;

import "google/api/annotations.proto";
import "service/authentication_service/model/authentication.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/olzzhas/grpc-sneakershop/service/authentication_service/service;proto_authentication_service";

service AuthenticationService {
  rpc CreateAuthenticationToken(CreateAuthenticationTokenRequest) returns(CreateAuthenticationTokenResponse){
    option (google.api.http) = {
      post: "/v1/create-authtoken",
      body: "*"
    };
  }
}

message CreateAuthenticationTokenRequest{
  uint32 user_id = 1;
  string password = 2;
}

message CreateAuthenticationTokenResponse{
  model.Token token = 1;
}

